Edit currency pairs in the settings

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -228,4 +228,13 @@
     <string name="menu_lang_zh">Chi</string>
 
     <string name="exchange_rate">Курс: %.4f %s/%s</string>
+
+    <string name="first_asset">Base актив</string>
+    <string name="second_asset">Quote актив</string>
+    <string name="add_pair_err">Некорректное имя актива!</string>
+    <string name="add_pair">Добавление торговой пары</string>
+    <string name="add_pair_exist">Такая торговая пара уже существует!</string>
+    <string name="cannot_delete_selected_pair">Нельзя удалить выбранную торговую пару!</string>
+    <string name="add">Добавить</string>
+
 </resources>
