--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -236,4 +236,13 @@
     <string name="menu_lang_zh">Chi</string>
 
     <string name="exchange_rate">Rate: %.4f %s/%s</string>
+
+    <string name="first_asset">Base asset</string>
+    <string name="second_asset">Quote asset</string>
+    <string name="add_pair_err">Invalid asset name!</string>
+    <string name="add_pair">Add assets pair</string>
+    <string name="add_pair_exist">This pair already exist!</string>
+    <string name="cannot_delete_selected_pair">Can not delete selected pair!</string>
+    <string name="add">Add</string>
+
 </resources>
