--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -247,4 +247,11 @@
     <string name="servers">Сервера (ноды)</string>
     <string name="cant_delete">Нельзя удалить текущий сервер!</string>
     <string name="cant_delete_last">Нельзя удалить последний сервер!</string>
+
+    <string name="keys">Ключи</string>
+    <string name="pub_copied">Публичный ключ скопирован</string>
+    <string name="priv_copied">Приватный ключ скопирован</string>
+    <string name="copy_success">Успешно скопировано</string>
+    <string name="OK">OK</string>
+
 </resources>
