--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -257,4 +257,10 @@
     <string name="servers">Servers</string>
     <string name="cant_delete">Can not delete selected server!</string>
     <string name="cant_delete_last">Can not delete last server!</string>
+
+    <string name="keys">Keys</string>
+    <string name="pub_copied">Public key copied</string>
+    <string name="priv_copied">Private key copied</string>
+    <string name="copy_success">Copy Successfully</string>
+    <string name="OK">OK</string>
 </resources>
