--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -236,6 +236,7 @@
     <string name="menu_lang_zh">Chi</string>
 
     <string name="exchange_rate">Rate: %.4f %s/%s</string>
+    <string name="no_req_token">You do not have the requested token!</string>
 
     <string name="first_asset">Base asset</string>
     <string name="second_asset">Quote asset</string>
