--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -247,4 +247,14 @@
     <string name="add">Add</string>
     <string name="share">Share</string>
 
+    <string name="server_name">Server name</string>
+    <string name="server_address">Server address</string>
+    <string name="add_server">Add server</string>
+    <string name="checking">Checking...</string>
+    <string name="error">Error</string>
+    <string name="restart_now">Restart now</string>
+    <string name="app_will_restart">App will restart to apply changes</string>
+    <string name="servers">Servers</string>
+    <string name="cant_delete">Can not delete selected server!</string>
+    <string name="cant_delete_last">Can not delete last server!</string>
 </resources>
