--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,6 +1,6 @@
 ﻿<resources>
-    <string name="app_name_full">Cartera de Evraz</string>
-    <string name="app_name">Evraz Wallet</string>
+    <string name="app_name_full">Evraz</string>
+    <string name="app_name">Evraz</string>
 
     <string name="back">Atrás</string>
     <string name="registration">Regístrate</string>
