--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -1,6 +1,6 @@
 ﻿﻿<resources>
-    <string name="app_name_full">Evraz Portemonnee</string>
-    <string name="app_name">Evraz Portemonnee</string>
+    <string name="app_name_full">Evraz</string>
+    <string name="app_name">Evraz</string>
 
     <!--ä¾§è¾¹æ -->
     <string name="navigation_drawer_open">Open navigatie menu</string>
