--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name_full">Evraz Кошелек</string>
-    <string name="app_name">Evraz Кошелек</string>
+    <string name="app_name_full">Evraz</string>
+    <string name="app_name">Evraz</string>
     <!--new-->
 
     <string name="back">Назад</string>
