--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name_full">Evraz Wallet</string>
-    <string name="app_name">Evraz Wallet</string>
+    <string name="app_name_full">Evraz</string>
+    <string name="app_name">Evraz</string>
     <string name="auth_title" translatable="false">Bitshares blockchain</string>
 
     <string name="back">back</string>
@@ -20,11 +20,15 @@
     <string name="confirm_password">Confirm the password</string>
     <string name="reg_checkbox_1">I realize that I will lose access to my funds if I lose my password пароль </string>
     <string name="reg_checkbox_2">I realize, that nobody can restore my password if I lose or forget it</string>
-    <string name="reg_checkbox_3">I wrote down or have saved in the other way my password</string>
+    <string name="reg_checkbox_3">I wrote down or have saved in the other way my password</string>P
+    <string name="hide_assets">Hide assets</string>
+    <string name="loading_assets">Loading assets</string>
+    <string name="hide">Hide</string>
     <string name="balance">Balance</string>
     <string name="send">Send</string>
     <string name="exchange">Exchange</string>
-    <string name="exchange_title">My markets</string>
+    <string name="exchange_title">My markets</string>    <string name="save">Save</string>
+
     <string name="portfolio">Portfolio</string>
     <string name="open_orders">Open orders</string>
     <string name="position_provision">Position provision</string>
@@ -268,4 +272,5 @@
     <string name="Public_key">Public key</string>
     <string name="Private_key">Private key</string>
     <string name="show_keys">Keys</string>
+    <string name="delete">Delete</string>
 </resources>
